# rust_crud_db_postgres

./: Cargo.toml  data.txt
src/: lib.rs
src/database/: db.rs  mod.rs
src/errors/: error.rs  mod.rs
src/handlers/: hr.rs
src/models/: hr.rs  mod.rs
src/repository/: hr.rs
