[package]
name = "test_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-postgres = {version = "0.10.5",features = ["serde"]}
tokio-postgres = "0.7.5"
serde = {version = "^1.0",features = ["derive"]}
serde_json = "1.0.93"
tokio = "1.25.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
derive_more = "0.99.17"
postgres = {version = "0.19.3"}